--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "40k-list-parser",
   "version": "0.0.2",
-  "description": "A complete Node.js project template using TypeScript and following general best practices.",
+  "description": "A parser for Warhammer 40k army lists",
   "keywords": [
     "typescript"
   ],
