--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dist/"
   ],
   "scripts": {
-    "build": "npm run clean && npm run lint && tsc && copyfiles ./src/grammar ./dist/grammar",
+    "copy-files": "copyfiles -u 1 ./src/grammar/*.peggy ./dist/grammar",
+    "build": "npm run clean && npm run lint && tsc && npm run copy-files",
     "changelog": "conventional-changelog -p angular -u",
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "clean": "node -e \"var { rmdirSync, existsSync } = require('fs'), path = require('path'); ['./.nyc_output', './coverage', './dist'].forEach(fPath => {if (existsSync(path.join(__dirname, fPath))) rmdirSync(path.join(__dirname, fPath), { recursive: true })}); process.exit(0);\"",
